refactor: soft deletion, jobs package
